--- a/css/style.css
+++ b/css/style.css
@@ -65,3 +65,32 @@
     cursor: pointer;
     font-weight: bold;
   }
+
+  #multiplication-operations {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 300px;
+    margin: 1rem auto;
+    padding: 2rem 1rem;
+    background-color: #FFF;
+    color: #333;
+    border-radius: 1rem;
+  }
+
+  #multiplication-operations .row {
+    display: flex;
+    justify-content: center;
+    border: 1px solid #ccc;
+    border-bottom: none;
+    padding: 0.5rem;
+    width: 150px;
+  }
+
+  #multiplication-operations .row:last-child {
+    border-bottom: 1px solid #ccc;
+  }
+
+  #multiplication-operations .result {
+    margin-left: 0.4rem;
+  }
